# c-sha2

./: CMakeLists.txt  README.md  config.h.in
.github/workflows/: npm-publish.yml
cmake/: CheckCCompilerFlagSSP.cmake  CheckCXXCompilerFlagSSP.cmake  DefineCompilerFlags.cmake
src/: CMakeLists.txt  crypto_internal.h  sha2-wasm.c  sha2.c  sha256.c  sha256.h  sha512.c  sha512.h  sse_intrinsics.h  test_digest.c  test_digest.h  test_digest_sha256.c  test_digest_sha512.c  tinycrypto.h
src/js/: LICENSE  esm-output-epilogue.mjs.in  esm-output-preamble.mjs.in  index.d.ts  package.json  preamble.js.in  sha2-wasm-wrapper.js.in  umd-output-epilogue.cjs.in  umd-output-preamble.cjs.in
